# setrum

./: .env.example  .gitignore  pyproject.toml  run.py  test_octopus.py
core/: database.py  fetchers.py  orchestrator.py  queries.py  transformations.py
core/services/: __init__.py  annotations.py  consumption.py  sync.py  tags.py
dash_app/: app.py  layout.py  stores.py
dash_app/assets/: canvas_drag.js  canvas_pan_zoom.js  setrum.css
dash_app/callbacks/: __init__.py  annotation_manager.py  annotations.py  boot.py  canvas.py  charts.py  date_filters.py  router.py  selection.py  summary.py  sync.py  tab_router.py
dash_app/charts/: theme.py
dash_app/components/: annotation_delete_confirm.py  annotation_form.py  annotation_format.py  annotation_manager_form.py  annotations_board.py  daily_cost_chart.py  date_range_filter.py  header.py  hh_chart.py  sidebar.py  summary_cards.py
dash_app/components/tabs/: annotations_tab.py  consumptions_tab.py  insights_tab.py
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  PRODUCT.md
